# train_demo

./: CMakeLists.txt  run.sh
example/: buildEngine.cpp  main.cpp  runDet.cpp
include/: ObjProcess.h  ObjectLayer.h  Object_detect.h  OjectConfig.h  human_pose_estimator.h  peak.h
src/: ObjProcess.cpp  ObjectLayer.cu  Object_detect.cpp  human_pose_estimator.cpp  peak.cpp
